--- a/src/client/views/stock.hbs
+++ b/src/client/views/stock.hbs
@@ -7,7 +7,7 @@
                 <div class="grid-container">
                     {{#each mobiles}}
                         <div class="grid-item">
-                            <a href="{{URL_BASE}}/mobile/{{_id}}">
+                            <a href="/mobile/{{_id}}">
                                 {{>card}}
                             </a>
                         </div>
