--- a/src/client/views/add.hbs
+++ b/src/client/views/add.hbs
@@ -2,7 +2,7 @@
 <div class="container">
     <h1>Add a new mobile</h1>
     <div class="wrapper">
-        <div class="card">
+        <div class="card shadow">
             <figure class="image-container">
                 <img id="chosen-image" src="">
                 <figcaption id="file-name"></figcaption>
