--- a/src/client/views/partials/card.hbs
+++ b/src/client/views/partials/card.hbs
@@ -1,5 +1,5 @@
 <div class="card shadow">
-    <img src="img/{{imagen}}" alt="telefono">
+    <img src="{{imagen.secure_url}}" alt="telefono">
     <h3><span class="green">{{nombre}}</span></h3>
     <p>Modelo: <span class="green">{{modelo}}</span></p>
     <p>Guardado: <span class="green">{{almacenado}}</span></p>
