--- a/src/client/views/mobile.hbs
+++ b/src/client/views/mobile.hbs
@@ -31,7 +31,7 @@
 
 {{#if success}}
     <div class="back-card" id="back-card">
-        <div class="card shadow">
+        <div class="card shadow edit-card">
             <figure class="image-container">
                 <img id="chosen-image" src="{{mobile.imagen.secure_url}}">
                 <figcaption id="file-name">{{mobile.nombre}}</figcaption>
