--- a/src/client/views/partials/addForm.hbs
+++ b/src/client/views/partials/addForm.hbs
@@ -1,49 +1,51 @@
 {{!-- <form id="addform" action="URL_BASE/api/add" enctype="multipart/form-data" method="post" > --}}
-<form id="addform">
+<form id="addForm">
 
-    <div class="form-field-text">
+    {{!-- <div class="form-field-text">
         <input type="text" name="nombre" required>
         <label for="">Nombre</label>
-    </div>
+    </div> --}}
 
-    <div class="form-field-text">
+    {{>item-form _text=true _class="text" _type="text" _name="nombre" _label="Nombre"}}
+
+    <div class="form-control text">
         <input type="text" name="modelo" required>
         <label for="">Modelo</label>
     </div>
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="empresa" required>
         <label for="">Empresa</label>
     </div>
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="almacenado" required>
         <label for="">Almacenado</label>
     </div>
 
     <div class="form-group">
-        <div class="form-field">
+        <div class="form-control number">
             <label for="sims">SIMs: </label>
             <input type="number" name="sims" id="sims" min=1 max=2 value=1>
         </div>
 
-        <div class="form-field">
+        <div class="form-control number">
             <label for="cantidad">In: </label>
             <input type="number" name="cantidad" id="cantidad" min=0 max=10 value=0>
         </div>
 
-        <div class="form-field">
+        <div class="form-control number">
             <label for="entrgados">Out: </label>
             <input type="number" name="entregados" id="entregados" min=0 max=10 value=0>
         </div>
     </div>
     
-    <div class="form-field-file">
+    <div class="form-control file">
         <label for="upload-button"><img src="/img/cloud-upload.svg" alt="">&nbsp; Choose a image</label>
         <input type="file" name="imagen" id="upload-button" multiple="false">
     </div>
 
-    <div class="form-field-submit">
+    <div class="form-control submit">
         <input type="submit" value="Enviar">
     </div>
 
