--- a/src/client/views/partials/updateForm.hbs
+++ b/src/client/views/partials/updateForm.hbs
@@ -1,53 +1,53 @@
-<form id="updateform" data-id="{{_id}}">
+<form id="updateForm" data-id="{{_id}}">
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="nombre" required value="{{nombre}}">
         <label for="">Nombre</label>
     </div>
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="modelo" required value="{{modelo}}">
         <label for="">Modelo</label>
     </div>
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="empresa" required value="{{empresa}}">
         <label for="">Empresa</label>
     </div>
 
-    <div class="form-field-text">
+    <div class="form-control text">
         <input type="text" name="almacenado" required value="{{almacenado}}">
         <label for="">Almacenado</label>
     </div>
 
     <div class="form-group">
-        <div class="form-field">
+        <div class="form-control number">
             <label for="sims">SIMs: </label>
             <input type="number" name="sims" id="sims" min=1 max=2  value="{{sims}}">
         </div>
 
-        <div class="form-field">
+        <div class="form-control number">
             <label for="cantidad">In: </label>
             <input type="number" name="cantidad" id="cantidad" min=0 max=10  value="{{cantidad}}">
         </div>
 
-        <div class="form-field">
+        <div class="form-control number">
             <label for="entrgados">Out: </label>
             <input type="number" name="entregados" id="entregados" min=0 max=10  value="{{entregados}}">
         </div>
     </div>
     
-    <div class="form-field-file">
+    <div class="form-control file">
         <label for="upload-button"><img src="/img/cloud-upload.svg" alt="">&nbsp; Choose a image</label>
         <input type="file" name="imagen" id="upload-button" multiple="false">
     </div>
 
     <div class="buttons">
-        <div class="form-field-submit">
+        <div class="form-control submit">
             <input type="submit" value="Enviar">
         </div>
 
-        <div class="form-field-submit">
+        <div class="form-control button">
             <input type="button" id="btn-cancel" value="Cancelar">
         </div>
     </div>
