--- a/src/client/views/layouts/main.hbs
+++ b/src/client/views/layouts/main.hbs
@@ -8,12 +8,16 @@
     <title>{{title}}</title>
 </head>
 <body>
-    {{>navbar}}
+    {{#if token}}
+        {{>navbar _token=true}}
+    {{else}}
+        {{>navbar _token=false}}
+    {{/if}}
     {{{body}}}
 
         
     <script src="/js/script.js"></script>
-    <script src="/js/auth.js"></script>
+    <script src="/js/auth.js" type="module"></script>
 
 </body>
 </html>
